added dashboard count
